# util

./: Cargo.toml  README.md
src/: iter.rs  lib.rs  mod.rs
src/list/: mod.rs
src/pd/: collection.rs  mod.rs
src/pd/text/: code.rs  conversion.rs  join.rs  mod.rs  ops.rs  split.rs
