[package]
name = "util"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
im-rc = "15.0.0"
indoc = "1.0"
ropey = "1.3.2"
itertools = "0.10.3"
unicode-segmentation = "1.8.0"
extend = "1.1.2"
